# Crew-AI-agent

./: README.md  agents.yaml  crew.py  main.py  pyproject.toml  tasks.yaml
